--- a/src/app/dettagli-pratica/dettagli-pratica.component.scss
+++ b/src/app/dettagli-pratica/dettagli-pratica.component.scss
@@ -10,3 +10,10 @@
     align-items: center;
     justify-content: center;
 }
+
+.commit-procedure{
+    margin-bottom: 1em;
+    button{
+        float: right;
+    }
+}
