test upload file

--- a/src/app/core/components/shared/extensions/view-extensions/view-extensions.component.html
+++ b/src/app/core/components/shared/extensions/view-extensions/view-extensions.component.html
@@ -33,5 +33,6 @@
 </div>
 <view-extension *ngIf="viewSelected"
     [can_modify]="can_extend"
+    [idProcedure]="procedure.id"
     [extension]="selected_extension">
 </view-extension>
