fix stradario su occupazione-edile

--- a/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
@@ -7,25 +7,45 @@
         Pratica di occupazione suolo a carattere edilizio
         </mat-panel-description>
     </mat-expansion-panel-header>
-    <mat-form-field class="div-half" appearance="outline">
+    <mat-form-field class="div-two-thirds" appearance="outline">
         <mat-label>Ubicazione</mat-label>
-        <mat-select formControlName="intersection_address" (selectionChange)="onChangeStradario(indirizzo.id')">
+        <mat-select formControlName="address" (selectionChange)="onChangeStradario(form.get('address'), 'address_number')">
             <mat-option>----</mat-option>
-            <mat-option *ngFor="let indirizzo of indirizzi" [value]="indirizzo.toponimo">
+            <mat-option *ngFor="let indirizzo of indirizzi" [value]="indirizzo">
                 {{indirizzo.toponimo}}
             </mat-option>
         </mat-select>
         <mat-error>{{getErrorMessage(form.get('address'))}}</mat-error>
     </mat-form-field>
-    <mat-form-field class="div-half" appearance="outline">
+    <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Civico</mat-label>
-        <mat-select formControlName="intersection_address">
+        <mat-select formControlName="address_number">
             <mat-option>----</mat-option>
-            <mat-option *ngFor="let civico of civici" [value]="civico.id">
+            <mat-option *ngFor="let civico of civici[toCamelCase('address_number')] || []" [value]="civico.civico">
                 {{civico.civico}}
             </mat-option>
         </mat-select>
+        <mat-error>{{getErrorMessage(form.get('address_number'))}}</mat-error>
+    </mat-form-field>
+    <mat-form-field class="div-two-thirds" appearance="outline">
+        <mat-label>Intersezione</mat-label>
+        <mat-select formControlName="intersection_address" (selectionChange)="onChangeStradario(form.get('intersection_address'), 'intersection_number')">
+            <mat-option>----</mat-option>
+            <mat-option *ngFor="let indirizzo of indirizzi" [value]="indirizzo">
+                {{indirizzo.toponimo}}
+            </mat-option>
+        </mat-select>
         <mat-error>{{getErrorMessage(form.get('intersection_address'))}}</mat-error>
+    </mat-form-field>
+    <mat-form-field class="div-a-third" appearance="outline">
+        <mat-label>Civico</mat-label>
+        <mat-select formControlName="intersection_number">
+            <mat-option>----</mat-option>
+            <mat-option *ngFor="let civico of civici[toCamelCase('intersection_number')] || []" [value]="civico.civico">
+                {{civico.civico}}
+            </mat-option>
+        </mat-select>
+        <mat-error>{{getErrorMessage(form.get('intersection_number'))}}</mat-error>
     </mat-form-field>
     <ng-container formGroupName="scaffolding">
         <p class="padding-div">Dimensioni Impalcatura:</p>
