fix parsificazione dati in uscita dello stradario

--- a/src/app/pratiche/moduli/components-edilizia/occupazione-traslochi-lavori/occupazione-traslochi-lavori.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-traslochi-lavori/occupazione-traslochi-lavori.component.html
@@ -79,7 +79,7 @@
         <mat-error>{{getErrorMessage(form.get('end_time'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-full" appearance="outline">
-        <mat-label>Motivo dell'oocupazione</mat-label>
+        <mat-label>Motivo dell'occupazione</mat-label>
         <input matInput formControlName="reason" type="text">
         <mat-error>{{getErrorMessage(form.get('reason'))}}</mat-error>
     </mat-form-field>
