--- a/src/app/ricerca-pratiche/ricerca-pratiche.component.html
+++ b/src/app/ricerca-pratiche/ricerca-pratiche.component.html
@@ -56,6 +56,6 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   
-    <mat-paginator [pageIndex]="data?.meta.pagination.current_page - 1" [pageSize]="data?.meta.pagination.per_page" [length]="data?.meta.pagination.total" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageIndex]="data?.meta.pagination.current_page - 1" [pageSize]="data?.meta.pagination.per_page" [length]="data?.meta.pagination.total" (page)="changePage($event)" showFirstLastButtons></mat-paginator>
   </div>
   
