--- a/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
+++ b/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
@@ -10,7 +10,7 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
-        <mat-label>Stato paratica</mat-label>
+        <mat-label>Stato pratica</mat-label>
         <mat-select formControlName="status">
             <mat-option>----</mat-option>
             <mat-option *ngFor="let status of statuses" [value]="status.value">
@@ -19,7 +19,7 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
-        <mat-label>Protocollo</mat-label>
+        <mat-label>N. Protocollo</mat-label>
         <input formControlName="protocol" matInput type="text">
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
