--- a/src/app/ricerca-pratiche/ricerca-pratiche.component.html
+++ b/src/app/ricerca-pratiche/ricerca-pratiche.component.html
@@ -45,7 +45,7 @@
         <td mat-cell class="documents_uploaded" *matCellDef="let element"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
       </ng-container>
   
-      <ng-container matColumnDef="actions">
+      <ng-container matColumnDef="actions"  *ngIf="isUserLoggedIn">
         <th mat-header-cell *matHeaderCellDef> Azioni </th>
         <td mat-cell *matCellDef="let element" >
           <button mat-icon-button matTooltip="Visualizza dettagli" [routerLink]="['/dettagli-pratica/', element.id]"><mat-icon>launch</mat-icon> </button>
