--- a/src/app/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/dettagli-pratica/dettagli-pratica.component.html
@@ -2,8 +2,8 @@
     <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!isLoading">
-    <div class="div-full commit-procedure"  *ngIf="data_procedure.lenght > 0">
-        <button [disabled]="!can_commit" mat-raised-button color="primary" (click)="commitPratica()">
+    <div class="div-full commit-procedure">
+        <button [disabled]="!can_commit" mat-raised-button color="primary" (click)="getProcedure()">
             Inoltra pratica
         </button>
     </div>
