--- a/src/app/ricerca-pratiche/ricerca-pratiche.component.html
+++ b/src/app/ricerca-pratiche/ricerca-pratiche.component.html
@@ -41,14 +41,21 @@
       </ng-container>
   
       <ng-container matColumnDef="all_mandatory_documents_uploaded">
-        <th mat-header-cell *matHeaderCellDef> Documenti </th>
-        <td mat-cell class="documents_uploaded" *matCellDef="let element"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
+        <th mat-header-cell *matHeaderCellDef [ngStyle]="isUserLoggedIn == false ? {'display': 'none'}  : {}"> Documenti </th>
+        <td mat-cell class="documents_uploaded" *matCellDef="let element" [ngStyle]="isUserLoggedIn == false ? {'display': 'none'}  : {}"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
       </ng-container>
   
-      <ng-container matColumnDef="actions"  *ngIf="isUserLoggedIn">
+      <ng-container matColumnDef="actions" *ngIf="isUserLoggedIn">
         <th mat-header-cell *matHeaderCellDef> Azioni </th>
         <td mat-cell *matCellDef="let element" >
           <button mat-icon-button matTooltip="Visualizza dettagli" [routerLink]="['/dettagli-pratica/', element.id]"><mat-icon>launch</mat-icon> </button>
+        </td>
+      </ng-container> 
+
+      <ng-container matColumnDef="actions" *ngIf="isUserLoggedIn == false">
+        <th mat-header-cell *matHeaderCellDef> Azioni </th>
+        <td mat-cell *matCellDef="let element" >
+          <button mat-icon-button matTooltip="Visualizza in mappa" (click)="openMap(element)"><mat-icon>map</mat-icon> </button>
         </td>
       </ng-container> 
       
