aggiunto pulsante per salvare

--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -68,5 +68,11 @@
             </ng-container>
         </mat-menu>
     </div>
+    <div id="save_panel">
+        <button mat-raised-button matTooltip="Salva" matTooltipPosition="before" (click)="save()">
+            <fa-icon icon="save"></fa-icon>
+            Salva ed esci
+        </button>
+    </div>
     <div class="measureTooltip"></div>
 </div>
