--- a/src/app/core/components/map/map.component.scss
+++ b/src/app/core/components/map/map.component.scss
@@ -92,11 +92,22 @@
   border-bottom-right-radius: 5px;
 }
 
-
 #close_panel {
   position: absolute;
   top: .5em;
   right: .5em;
+}
+
+#save_panel {
+  position: absolute;
+  display: table;
+  text-align: center;
+  bottom: 0.5em;
+  width: fit-content;
+  button {
+    display: table-cell;
+    vertical-align: bottom;
+  }
 }
 
 #close_panel button,
