--- a/src/app/core/components/map/map.component.scss
+++ b/src/app/core/components/map/map.component.scss
@@ -104,6 +104,7 @@
   text-align: center;
   bottom: 0.5em;
   width: fit-content;
+  left: 45%;
   button {
     display: table-cell;
     vertical-align: bottom;
