--- a/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
@@ -148,4 +148,8 @@
         <mat-error>{{getErrorMessage(form.get('total_duration'))}}</mat-error>
     </mat-form-field>
 
+    <div class="div-half">
+        <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Disegna aree di occupazione</button>
+    </div>
+
 </mat-expansion-panel>
