--- a/src/app/pratiche/moduli/components-edilizia/occupazione-traslochi-lavori/occupazione-traslochi-lavori.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-traslochi-lavori/occupazione-traslochi-lavori.component.html
@@ -99,4 +99,8 @@
         <mat-hint>Informazioni aggiuntive ad es. targa veicolo</mat-hint>
         <mat-error>{{getErrorMessage(form.get('through_details'))}}</mat-error>
     </mat-form-field>
+
+    <div class="div-half">
+        <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Disegna aree di occupazione</button>
+    </div>
 </mat-expansion-panel>
