--- a/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
+++ b/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
@@ -80,6 +80,10 @@
         <mat-hint>Informazioni aggiuntive ad es. targa veicolo</mat-hint>
         <mat-error>{{getErrorMessage(form.get('through_details'))}}</mat-error>
     </mat-form-field>
+
+    <div class="div-half">
+        <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Disegna aree di occupazione</button>
+    </div>
 </mat-card>
 <div class="div-full">
     <button *ngIf="!can_modify && modifiable" class="button-login" mat-raised-button color="primary" (click)="modify()">
