--- a/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
+++ b/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
@@ -40,13 +40,13 @@
         <input formControlName="referrer_surname" matInput type="text">
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
-        <mat-label>Dal</mat-label>
+        <mat-label>Dal civico</mat-label>
         <input formControlName="created_at_since" matInput [matDatepicker]="created_at_since">
         <mat-datepicker-toggle matSuffix [for]="created_at_since"></mat-datepicker-toggle>
         <mat-datepicker #created_at_since></mat-datepicker>
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
-        <mat-label>Al</mat-label>
+        <mat-label>Al civico</mat-label>
         <input formControlName="created_at_until" matInput [matDatepicker]="created_at_until">
         <mat-datepicker-toggle matSuffix [for]="created_at_until"></mat-datepicker-toggle>
         <mat-datepicker #created_at_until></mat-datepicker>
