--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
             Sezione dedicata alla richiesta delle Autorizzazioni per il Comune di Chiavari
         </mat-card-subtitle>
         <mat-card-content>
-            Seguendo pochissimi passaggi avrete la possibilità di inoltrare in modo digitale!.
+            Seguendo pochissimi passaggi avrete la possibilità di inoltrarle in modo digitale!.
             <br>
         </mat-card-content>
     </mat-card>
