--- a/src/app/core/components/shared/details/view-rottura-suolo/view-rottura-suolo.component.html
+++ b/src/app/core/components/shared/details/view-rottura-suolo/view-rottura-suolo.component.html
@@ -3,36 +3,38 @@
 </div>
 <mat-card [formGroup]="form">
     <mat-form-field class="div-full" appearance="outline">
-        <mat-label>Motivo scavi</mat-label>
+        <mat-label>Motivazione</mat-label>
         <input matInput formControlName="reason" type="text">
         <mat-error>{{getErrorMessage(form.get('reason'))}}</mat-error>
     </mat-form-field>
     <ng-container formGroupName="description">
         <mat-form-field class="div-full" appearance="outline">
-            <mat-label>Causale</mat-label>
+            <mat-label>Descrizione</mat-label>
             <input matInput formControlName="motive" type="text">
             <mat-error>{{getErrorMessage(form.get(['description','motive']))}}</mat-error>
         </mat-form-field>
-        <mat-form-field class="div-a-third" appearance="outline">
-            <mat-label>Tipo di posa</mat-label>
-            <input matInput formControlName="laying_type" type="text">
-            <mat-hint>Tubazioni, polifore, etc.</mat-hint>
-            <mat-error>{{getErrorMessage(form.get(['description','laying_type']))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third text-right" appearance="outline">
-            <mat-label>Diametro</mat-label>
-            <input matInput formControlName="diameter" type="number">
-            <span matSuffix>cm</span>
-            <mat-hint>Diametro espresso in cm</mat-hint>
-            <mat-error>{{getErrorMessage(form.get(['description','diameter']))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third text-right" appearance="outline">
-            <mat-label>Lunghezza</mat-label>
-            <input matInput formControlName="length" type="number">
-            <span matSuffix>m</span>
-            <mat-hint>Lunghezza espressa in metri</mat-hint>
-            <mat-error>{{getErrorMessage(form.get(['description','length']))}}</mat-error>
-        </mat-form-field>
+        <mat-expansion-panel expanded>
+            <mat-form-field class="div-a-third" appearance="outline">
+                <mat-label>Tipo di posa</mat-label>
+                <input matInput formControlName="laying_type" type="text">
+                <mat-hint>Tubazioni, polifore, etc.</mat-hint>
+                <mat-error>{{getErrorMessage(form.get(['description','laying_type']))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-a-third text-right" appearance="outline">
+                <mat-label>Diametro</mat-label>
+                <input matInput formControlName="diameter" type="number">
+                <span matSuffix>cm</span>
+                <mat-hint>Diametro espresso in cm</mat-hint>
+                <mat-error>{{getErrorMessage(form.get(['description','diameter']))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-a-third text-right" appearance="outline">
+                <mat-label>Lunghezza</mat-label>
+                <input matInput formControlName="length" type="number">
+                <span matSuffix>m</span>
+                <mat-hint>Lunghezza espressa in metri</mat-hint>
+                <mat-error>{{getErrorMessage(form.get(['description','length']))}}</mat-error>
+            </mat-form-field>
+        </mat-expansion-panel>
         <mat-form-field class="div-full" appearance="outline">
             <mat-label>Note</mat-label>
             <textarea matInput formControlName="notes" type="text"></textarea>
@@ -42,14 +44,16 @@
     </ng-container>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Inizio lavori</mat-label>
-        <input formControlName="start_date" [min]="minDate()" matInput [matDatepicker]="start_date" (dateChange)="differenceDate(form, 'end_date', 'start_date', 'duration')">
+        <input formControlName="start_date" [min]="minDate()" matInput [matDatepicker]="start_date"
+            (dateChange)="differenceDate(form, 'end_date', 'start_date', 'duration')">
         <mat-datepicker-toggle matSuffix [for]="start_date"></mat-datepicker-toggle>
         <mat-datepicker #start_date></mat-datepicker>
         <mat-error>{{getErrorMessage(form.get('start_date'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Fine lavori</mat-label>
-        <input formControlName="end_date" [min]="calculateMinDate(form, 'start_date')" matInput [matDatepicker]="end_date" (dateChange)="differenceDate(form, 'end_date', 'start_date', 'duration')">
+        <input formControlName="end_date" [min]="calculateMinDate(form, 'start_date')" matInput
+            [matDatepicker]="end_date" (dateChange)="differenceDate(form, 'end_date', 'start_date', 'duration')">
         <mat-datepicker-toggle matSuffix [for]="end_date"></mat-datepicker-toggle>
         <mat-datepicker #end_date></mat-datepicker>
         <mat-error>{{getErrorMessage(form.get('end_date'))}}</mat-error>
@@ -63,14 +67,16 @@
     <ng-container formGroupName="excavation_details">
         <mat-form-field class="div-a-third text-right" appearance="outline">
             <mat-label>Estensione degli scavi</mat-label>
-            <input matInput formControlName="area_number" type="text" (change)="multiplicationPolizza(form, 'excavation_details/area_number', 'flooring_type', 'insurance/amount')">
+            <input matInput formControlName="area_number" type="text"
+                (change)="multiplicationPolizza(form, 'excavation_details/area_number', 'flooring_type', 'insurance/amount')">
             <span matSuffix>m<sup>2</sup></span>
             <mat-error>{{getErrorMessage(form.get('excavation_details').get('area_number'))}}</mat-error>
         </mat-form-field>
     </ng-container>
     <mat-form-field class="div-a-third" appearance="outline">
         <mat-label>Tipologia pavimentazione</mat-label>
-        <mat-select formControlName="flooring_type" (selectionChange)="multiplicationPolizza(form, 'excavation_details/area_number', 'flooring_type', 'insurance/amount')">
+        <mat-select formControlName="flooring_type"
+            (selectionChange)="multiplicationPolizza(form, 'excavation_details/area_number', 'flooring_type', 'insurance/amount')">
             <mat-option>Nessuna</mat-option>
             <mat-option *ngFor="let flooring_type of pavimentazioni" [value]="flooring_type.value">
                 {{flooring_type.name}} - € {{flooring_type.price}} m<sup>2</sup>
@@ -86,7 +92,8 @@
             <mat-error>{{getErrorMessage(form.get('building_site').get('area_number'))}}</mat-error>
         </mat-form-field>
     </ng-container>
-    <div class="div-full padding-div">Il richiedente si impegna a costituire, a titolo di cauzione, una polizza fidejussoria</div>
+    <div class="div-full padding-div">Il richiedente si impegna a costituire, a titolo di cauzione, una polizza
+        fidejussoria</div>
     <ng-container formGroupName="insurance">
         <div class="div-checkbox div-half">
             <mat-checkbox formControlName="surety">Conferma la sottoscrizione della poliza</mat-checkbox>
@@ -105,7 +112,8 @@
             <mat-card *ngFor="let contatto of formAddress.controls; let i = index;" [formGroupName]="i">
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Indirizzo</mat-label>
-                    <mat-select formControlName="street_name" (selectionChange)="onChangeStradario(formAddress.controls[i].get('street_name'), i)">
+                    <mat-select formControlName="street_name"
+                        (selectionChange)="onChangeStradario(formAddress.controls[i].get('street_name'), i)">
                         <mat-option>----</mat-option>
                         <mat-option *ngFor="let indirizzo of indirizzi" [value]="indirizzo">
                             {{indirizzo.toponimo}}
@@ -114,7 +122,7 @@
                     <mat-error>{{getErrorMessage(formAddress.controls[i].get('street_name'))}}</mat-error>
                 </mat-form-field>
                 <mat-form-field class="div-a-quarter" appearance="outline">
-                    <mat-label>Dal</mat-label>
+                    <mat-label>Dal civico</mat-label>
                     <mat-select formControlName="from_street_number">
                         <mat-option value="sn">Senza numero</mat-option>
                         <mat-option *ngFor="let civico of civici[i] || []" [value]="civico.civico">
@@ -124,7 +132,7 @@
                     <mat-error>{{getErrorMessage(formAddress.controls[i].get('from_street_number'))}}</mat-error>
                 </mat-form-field>
                 <mat-form-field class="div-a-quarter" appearance="outline">
-                    <mat-label>Al</mat-label>
+                    <mat-label>Al civico</mat-label>
                     <mat-select formControlName="to_street_number">
                         <mat-option value="sn">Senza numero</mat-option>
                         <mat-option *ngFor="let civico of civici[i] || []" [value]="civico.civico">
@@ -133,7 +141,8 @@
                     </mat-select>
                     <mat-error>{{getErrorMessage(formAddress.controls[i].get('to_street_number'))}}</mat-error>
                 </mat-form-field>
-                <button *ngIf="formAddress.controls.length > 1" [disabled]="!can_modify" class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formAddress, i);">
+                <button *ngIf="formAddress.controls.length > 1" [disabled]="!can_modify" class="button-delete"
+                    mat-mini-fab color="warn" (click)="removeItem(formAddress, i);">
                     <mat-icon>close</mat-icon>
                 </button>
             </mat-card>
@@ -145,17 +154,20 @@
     </ng-container>
     <div class="div-a-quarter" appearance="outline">
         <mat-label>N. geometrie scavo</mat-label>
-        <input matInput readonly="true" type="number" [value]="form.get(['excavation_details', 'geometry']).value != '' ? 1 : 0">
+        <input matInput readonly="true" type="number"
+            [value]="form.get(['excavation_details', 'geometry']).value != '' ? 1 : 0">
         <mat-error>{{getErrorMessage(form.get(['excavation_details', 'geometry']))}}</mat-error>
     </div>
     <div class="div-a-quarter" appearance="outline">
         <mat-label>N. geometrie cantiere</mat-label>
-        <input matInput readonly="true" type="number" [value]="form.get(['building_site', 'geometry']).value.length != '' ? 1 : 0">
+        <input matInput readonly="true" type="number"
+            [value]="form.get(['building_site', 'geometry']).value.length != '' ? 1 : 0">
         <mat-error>{{getErrorMessage(form.get(['building_site', 'geometry']))}}</mat-error>
     </div>
-    
+
     <div class="div-half" *ngIf="can_modify">
-        <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Disegna aree di occupazione</button>
+        <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Disegna aree di
+            occupazione</button>
     </div>
 </mat-card>
 <div class="div-full">
