--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -40,10 +40,10 @@
       <td mat-cell *matCellDef="let element"> {{element | expertPipe}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="all_mandatory_documents_uploaded">
+    <!-- <ng-container matColumnDef="all_mandatory_documents_uploaded">
       <th mat-header-cell *matHeaderCellDef> Documenti </th>
       <td mat-cell class="documents_uploaded" *matCellDef="let element"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
-    </ng-container>
+    </ng-container> -->
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Azioni </th>
