--- a/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
@@ -45,7 +45,8 @@
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Codice fiscale</mat-label>
         <input formControlName="fiscal_code" matInput type="text">
-        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkFiscalCode()">
+        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati"
+            (click)="autocomplete()" [disabled]="checkFiscalCode()">
             <mat-icon>post_add</mat-icon>
         </button>
         <mat-error>{{getErrorMessage(form.get('fiscal_code'))}}</mat-error>
@@ -53,7 +54,8 @@
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Partita IVA</mat-label>
         <input formControlName="vat" matInput type="text">
-        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkVat()">
+        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati"
+            (click)="autocomplete()" [disabled]="checkVat()">
             <mat-icon>post_add</mat-icon>
         </button>
         <mat-error>{{getErrorMessage(form.get('vat'))}}</mat-error>
@@ -150,6 +152,16 @@
             <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
         </mat-form-field>
     </ng-container>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Telefono</mat-label>
+        <input formControlName="phone" matInput type="text">
+        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
+    </mat-form-field>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input formControlName="email" matInput type="email">
+        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
+    </mat-form-field>
     <mat-expansion-panel [disabled]="!formContacts.enabled" formArrayName="contacts"
         [expanded]="formContacts.enabled && formContacts.controls.length > 0">
         <mat-expansion-panel-header>
@@ -195,26 +207,6 @@
                 (click)="addContatto(form.get('contacts'));">Aggiungi</button>
         </div>
     </mat-expansion-panel>
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Telefono</mat-label>
-        <input formControlName="phone" matInput type="text">
-        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
-    </mat-form-field>
-    <!-- <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Cellulare</mat-label>
-        <input formControlName="cellular" matInput type="number" (change)="check(form, 'cellular','phone')">
-        <mat-error>{{getErrorMessage(form.get('cellular'))}}</mat-error>
-    </mat-form-field> -->
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Email</mat-label>
-        <input formControlName="email" matInput type="email">
-        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
-    </mat-form-field>
-    <!-- <mat-form-field class="div-half" appearance="outline">
-        <mat-label>PEC</mat-label>
-        <input formControlName="pec" matInput type="email">
-        <mat-error>{{getErrorMessage(form.get('pec'))}}</mat-error>
-    </mat-form-field> -->
     <mat-error>{{getErrorMessage(form)}}</mat-error>
 
 </mat-expansion-panel>
